--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "apollo-angular": "^0.13.0",
+    "apollo-client": "^1.9.1",
+    "auth0-js": "^8.8.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "graphql-tag": "^2.4.2",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
