--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # dependencies
 /node_modules
+/nbproject
 
 # IDEs and editors
 /.idea
@@ -41,7 +42,3 @@ testem.log
 .DS_Store
 Thumbs.db
 /nbproject/private/
-
-# perso
-nbproject
-node_modules
